<resources>
    <string name="app_name">MyBox</string>
    <string name="nuevoRecuerdo">Nuevo Recuerdo</string>
    <string name="fragment_inicio">Inicio</string>
    <string name="fragment_favoritos">Favoritos</string>
    <string name="fragment_buscar">Buscar</string>
    <string name="fragment_ajustes">Ajustes</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="etiquetaNuevoRcuerdo">Nuevo Recuerdo</string>
    <string name="etiquetaRecursos">Añade recursos</string>
    <string name="boton_ok">Guardar</string>
    <string name="boton_cancelar">Cancelar</string>
    <string name="tituloRecuerdo">Título</string>
    <string name="nuevoRecuerdoTitulo">Título</string>
    <string name="nuevoRecuerdoComentarios">Comentarios</string>
    <string name="nuevoRecuerdoEtiquetas">Etiquetas (separadas por comas)</string>
    <string name="noFavoritos">No hay favoritos</string>
    <string name="descripcionBotonFoto">Foto</string>
    <string name="descripcionBotonArchivo">Archivo</string>
    <string name="radioTicket">Ticket</string>
    <string name="radioOtros">Otros</string>
    <string name="radioEntrada">Entrada</string>
    <string name="radioFactura">Factura</string>
    <string name="nuevoRecuerdoActivity">Nuevo Recuerdo</string>
    <string name="tituloajustes">Ajustes Generales</string>
    <string name="ajustes_bt_avisos">Activar Avisos</string>
    <string name="ajustes_backup">Copias de seguridad</string>
    <string name="ajustes_crear_backup">Crear copia de seguridad</string>
    <string name="btHacerBackup">Crear Backup</string>
    <string name="avisoBorrar">¿Estás seguro que deseas eliminar el recuerdo?</string>
    <string name="borrar">Borrar</string>
    <string name="tituloBorrar">Borrar Recuerdo</string>
    <string name="editarRecuerdoActivity">Editar Recuerdo</string>
    <string name="avisoTituloVacio">El título no puede estar vacío</string>
    <string name="recuerdoGuardado">Recuerdo guardado!</string>
    <string name="errorGuardarRecuerdo">Error! No se pudo guardar el recuerdo</string>
    <string name="recuerdoActualizado">Recuerdo actualizado!</string>
    <string name="errorActualizarRecuerdo">Error! No se pudo actualizar el recuerdo</string>
    <string name="title_activity_ver_imagen">FullscreenActivity</string>
    <string name="cerrar">Cerrar</string>
    <string name="ajustes_bt_OCR">Hacer OCR</string>
    <string name="ajustes_restaurar_backup">Restaurar copia de seguridad</string>
    <string name="restaurarBackup">Restaurar</string>
    <string name="ajustes_limpiar">Datos Almacenados</string>
    <string name="avisoBorrarRecursos">Esta operación no se puede revertir, borrará los archivos almacenados y asociados a los recuerdos que haya creado, ¿está seguro?\n\nSi lo desea, puede crear una copia de seguridad previamente para conservarlos.</string>
    <string name="borrarArchivos">Eliminar archivos</string>
    <string name="creando">Creando...</string>
    <string name="txtTituloBackups">Selecciona copia de seguidad</string>
    <string name="aviso">Aviso</string>
    <string name="restaurando">Restaurando...</string>
    <string name="exportar">Exportar</string>
    <string name="otro">Otro...</string>
    <string name="avisoOCR">Al activarse, el reconocimiento de texto se realizará en cada foto, imagen o pdf que se seleccione.\nEsta función conlleva un gran consumo de recursos, según las características de tu dispositivo puede suponer que la aplicación trabaje más lentamente o tengas que esperar un tiempo antes de guardar el Recuerdo que quieras conservar.\n\nSólo se recomienda activar en caso necesario.</string>
    <string name="haciendoOCR">Está realizando OCR en segundo plano, si guarda ahora el Recuerdo el texto que se pueda reconocer en el archivo adjuntado no se guardará. Si en este momento no le interesa puede continuar.\nSugerencia: si no necesita esta funcionalidad, desactívela en la pantalla de ajustes, ahorrará recursos en su dispositivo.\n\n¿Quiere guardar ahora perdiendo el OCR en curso?</string>
</resources>