<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.Inicio.fragment_inicio">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"

            >
            <CheckBox
                android:id="@+id/checkTicket"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/radioTicket"
                android:checked="true"/>

            <CheckBox
                android:id="@+id/checkFactura"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/radioFactura"
                android:checked="true"/>

            <CheckBox
                android:id="@+id/checkEntrada"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/radioEntrada"
                android:checked="true"/>

            <CheckBox
                android:id="@+id/checkOtros"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/radioOtros"
                android:checked="true"/>
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvRecuerdos"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:listitem="@layout/tarjeta_recuerdo" />

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/boton_crear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        app:srcCompat="@drawable/boton_mas"
        android:clickable="true"
        android:layout_marginEnd="10dp"
        app:backgroundTint="@android:color/holo_red_dark"
        android:layout_marginBottom="10dp"
        app:borderWidth="0dp"
        android:focusable="true" />


</FrameLayout>